# langchain-app-on-cloud-run

./: Dockerfile  README.md  pyproject.toml
app/: indexer.py  server.py
assets/: architecture.png:Zone.Identifier  playground.png:Zone.Identifier
